	not be found, because the pegasusHome variable was not being set properly 
	in the Windows service work thread.

28.  (Bob Blair by KS) 17 March 2002 - Modified repository so there is both a
        local repository (cimmofl) and a client interface repository (cimmof) 
	executable
       
29.  (KS ) 18 March 2002 - Modified schema makefiles to use the cimomfl respository
        executable. 
-------------------------------------------------------------------
Version 1.06 working towards 1.1 Started 13 December 2001

1. Merged back to Main branch.  All general development will be in main branch 
       in the future with releases in side branches. Special side developments
       may temporarily be in side branches.
       Changed cimversion to 1.06.  We will do 1.1 based on functionality.
       
2. (Karl) 18 December 2001 - Added new directory repositories where repository 
	implementations will be kept to separate them from the 
	repository interface defintion. Initial implementation is genericfile
	which is the current file based repository.
	
	Added new build variable RMREPOSITORY which is a generic MAKE command
	to remove an existing repository.  It simply substitutes for the RMDIRHIER
	command at this point but we will make this a generic part of system
	in the future.

3. (Roger Kumpf - HP) 18 Dec 2001 - Updated the CIMOperationRequestDecoder
   to check that all required parameters for intrinsic methods are
   present.  If a required parameter is missing, a CIM_ERR_INVALID_PARAMETER
   exception is thrown.  Also added checks for duplicate parameters in the
   intrinsic methods.  If a parameter is specified more than once, a
   CIM_ERR_INVALID_PARAMETER exception is thrown.

4. (Nag Boranna - HP) 14 Jan 2002 - Created CIMOperationRequestAuthorizer queue
   and moved Authorization verification code from CIMOperationRequestDecoder
   queue to this new queue. Modified CIMServer.cpp to create